Fixed Scrollbar Missing

--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -115,7 +115,6 @@ a.navbar-item.is-active,
 }
 
 .noOverflow {
-  overflow-y: hidden;
   overflow-x: hidden;
 }
 
